feat: update images and improve carousel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,14 +14,15 @@
     <div fxShow="true" fxHide.lt-md="true">
       <a mat-button [routerLink]="'/home'" >Inicio</a>
       <a mat-button [routerLink]="'/about'" >Acerca</a>
-      <a mat-button [routerLink]="'/services'" >Servicios</a>
+
+      <!-- <a mat-button [routerLink]="'/services'" >Servicios</a>-->
     </div>
   </mat-toolbar>
   <mat-sidenav color="primary" #sidenav fxLayout="column" mode="over"  opened="false" fxHide.gt-sm="true">
     <div fxLayout="column">
       <a mat-button [routerLink]="'/home'" >Inicio</a>
       <a mat-button [routerLink]="'/about'" >Acerca</a>
-      <a mat-button [routerLink]="'/services'" >Servicios</a>
+      <!--<a mat-button [routerLink]="'/services'" >Servicios</a>-->
     </div>
   </mat-sidenav>
   <router-outlet></router-outlet>
