--- a/src/app/public/pages/home/home.component.css
+++ b/src/app/public/pages/home/home.component.css
@@ -26,7 +26,7 @@ img {
   margin: 1vh;
   top: 40%;
   transform: translateY(-50%);
-  height:40px; background-color: cadetblue;
+  height:40px; background-color: #43bdf3;
   color: aliceblue;
   border-color: azure;
   border-radius: 30px;
@@ -45,7 +45,7 @@ img {
 .download-button {
   display: inline-block;
   padding: 15px 30px;
-  background: #228B22;
+  background: #54c0d3;
   color: #fff;
   text-decoration: none;
   margin-top: 2vh;
@@ -63,14 +63,14 @@ img {
   line-height: 30px;
   text-align: center;
   background: #fff;
-  color: #228B22;
+  color: #55a2c4;
   border-radius: 50%;
   margin-right: 10px;
   transition: transform 0.3s ease;
 }
 
 .download-button:hover {
-  background: #1E7E34;
+  background: #158fc9;
 }
 
 .download-button:hover i {
@@ -80,3 +80,102 @@ img {
   margin-top: 2vh;
   margin-bottom:2vh;
 }
+
+.jk-carousel {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.jk-carousel::before {
+  content: '';
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0,0,0,0.18);
+}
+
+.jk-carousel__content {
+  text-align: center;
+  width: 100%;
+  align-self: stretch;
+  display: flex;
+  overflow: hidden;
+}
+
+.jk-carousel__content-item {
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 100%;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  transition: 1s all ease-in;
+}
+
+.jk-carousel__content-item h1 {
+  color: #fdf7f7;
+  font-weight: 900;
+  text-transform: uppercase;
+  z-index: 1;
+}
+
+.jk-carousel__content-item h1 span {
+  color: #039be5;
+}
+
+.jk-carousel__content-item p {
+  z-index: 1;
+  color: #ECEFF1;
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.jk-carousel__btns {
+  position: absolute;
+  width: 90%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.jk-carousel__btns > i {
+  opacity: 0.7;
+  color: #ECEFF1;
+  font-size: 45px;
+  cursor: pointer;
+  justify-content: space-between;
+}
+
+.jk-carousel__steps {
+  position: absolute;
+  bottom: 40px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.jk-carousel__steps-step {
+  height: 8px;
+  width: 25px;
+  margin: 0 5px;
+  border-radius: 5px;
+  border: 1px solid rgba(255,255,255,0.7);
+  cursor: pointer;
+  transition: 0.75s all ease-in-out;
+}
+
+.jk-carousel__steps-step:hover,
+.jk-carousel__steps-step-active {
+  opacity: 0.7;
+  background: #ECEFF1;
+}
+
+
+
