feat:fix padding at about section

--- a/src/app/public/pages/about/about.component.html
+++ b/src/app/public/pages/about/about.component.html
@@ -1,5 +1,5 @@
 <div class="about-section">
-  <h2>Acerca de Nosotros</h2>
+  <h2 style="text-align: center">Acerca de Nosotros</h2>
 
   <p>
     Somos una plataforma que conecta a los mayoristas con los propietarios de bodegas en todo el Perú,
