--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -24,7 +24,7 @@
 
     </mat-card-header>
     <mat-card-content class="description-app-content">
-      <a href="assets/pidde.apk" class="download-button">
+      <a href="assets/MiBodega.apk" class="download-button">
         <i class="fas fa-download"></i>
         Descargar App
       </a>
