--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <a class="Portfolio-bottom" mat-button [routerLink]="'/home'" >
       <mat-icon class="mat-icon-portfolio" svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon">
       </mat-icon>
-      <span>PIDDE</span>
+      <span>MIBodega</span>
     </a>
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md="true">
